--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3646,8 +3646,8 @@ details.collapse summary::-webkit-details-marker {
 .mb-11 {
   margin-bottom: 2.75rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -3667,6 +3667,9 @@ details.collapse summary::-webkit-details-marker {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.mr-auto {
+  margin-right: auto;
+}
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -3675,9 +3678,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .mt-4 {
   margin-top: 1rem;
-}
-.mt-5 {
-  margin-top: 1.25rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -3750,9 +3750,6 @@ details.collapse summary::-webkit-details-marker {
 .h-6 {
   height: 1.5rem;
 }
-.h-8 {
-  height: 2rem;
-}
 .h-\[10px\] {
   height: 10px;
 }
@@ -3814,8 +3811,8 @@ details.collapse summary::-webkit-details-marker {
 .min-h-\[660px\] {
   min-height: 660px;
 }
-.w-10 {
-  width: 2.5rem;
+.w-1\/2 {
+  width: 50%;
 }
 .w-11\/12 {
   width: 91.666667%;
@@ -3834,6 +3831,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-6 {
   width: 1.5rem;
+}
+.w-8 {
+  width: 2rem;
 }
 .w-\[10px\] {
   width: 10px;
@@ -3954,11 +3954,11 @@ details.collapse summary::-webkit-details-marker {
 .max-w-\[420px\] {
   max-width: 420px;
 }
-.max-w-\[470px\] {
-  max-width: 470px;
-}
 .max-w-\[480px\] {
   max-width: 480px;
+}
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 .max-w-\[522px\] {
   max-width: 522px;
@@ -4019,6 +4019,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -4052,6 +4056,9 @@ details.collapse summary::-webkit-details-marker {
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
+.grid-rows-\[0fr\] {
+  grid-template-rows: 0fr;
+}
 .grid-rows-\[1fr_32px_1fr_64px\] {
   grid-template-rows: 1fr 32px 1fr 64px;
 }
@@ -4066,9 +4073,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .flex-wrap {
   flex-wrap: wrap;
-}
-.flex-nowrap {
-  flex-wrap: nowrap;
 }
 .place-items-center {
   place-items: center;
@@ -4096,9 +4100,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .gap-1 {
   gap: 0.25rem;
-}
-.gap-12 {
-  gap: 3rem;
 }
 .gap-2 {
   gap: 0.5rem;
@@ -4147,6 +4148,10 @@ details.collapse summary::-webkit-details-marker {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
 .gap-y-2 {
   row-gap: 0.5rem;
 }
@@ -4158,6 +4163,16 @@ details.collapse summary::-webkit-details-marker {
 }
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+.space-y-0\.5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -4173,9 +4188,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .place-self-end {
   place-self: end;
-}
-.self-end {
-  align-self: flex-end;
 }
 .overflow-auto {
   overflow: auto;
@@ -4306,10 +4318,6 @@ details.collapse summary::-webkit-details-marker {
   --tw-border-opacity: 1;
   border-color: rgb(201 207 207 / var(--tw-border-opacity));
 }
-.border-base-100 {
-  --tw-border-opacity: 1;
-  border-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-border-opacity)));
-}
 .border-base-200 {
   --tw-border-opacity: 1;
   border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
@@ -4336,6 +4344,10 @@ details.collapse summary::-webkit-details-marker {
 .bg-\[\#444\] {
   --tw-bg-opacity: 1;
   background-color: rgb(68 68 68 / var(--tw-bg-opacity));
+}
+.bg-\[\#696969\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(105 105 105 / var(--tw-bg-opacity));
 }
 .bg-\[\#C9CFCF\] {
   --tw-bg-opacity: 1;
@@ -4421,6 +4433,9 @@ details.collapse summary::-webkit-details-marker {
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
+.\!p-4 {
+  padding: 1rem !important;
+}
 .p-1 {
   padding: 0.25rem;
 }
@@ -4444,10 +4459,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .p-8 {
   padding: 2rem;
-}
-.\!px-4 {
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
 }
 .px-12 {
   padding-left: 3rem;
@@ -4525,6 +4536,13 @@ details.collapse summary::-webkit-details-marker {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -4533,6 +4551,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pb-4 {
   padding-bottom: 1rem;
+}
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 .pb-9 {
   padding-bottom: 2.25rem;
@@ -4560,6 +4581,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pt-1 {
   padding-top: 0.25rem;
+}
+.pt-12 {
+  padding-top: 3rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -4730,6 +4754,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-text-opacity: 1;
   color: rgb(103 105 118 / var(--tw-text-opacity));
 }
+.text-\[\#d0d2de\] {
+  --tw-text-opacity: 1;
+  color: rgb(208 210 222 / var(--tw-text-opacity));
+}
 .text-\[\#f68e1e\] {
   --tw-text-opacity: 1;
   color: rgb(246 142 30 / var(--tw-text-opacity));
@@ -4785,6 +4813,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .opacity-20 {
   opacity: 0.2;
+}
+.opacity-50 {
+  opacity: 0.5;
 }
 .opacity-70 {
   opacity: 0.7;
@@ -5134,6 +5165,10 @@ details.collapse summary::-webkit-details-marker {
   margin-left: 1rem;
 }
 
+.first\:pt-1:first-child {
+  padding-top: 0.25rem;
+}
+
 .last\:mr-4:last-child {
   margin-right: 1rem;
 }
@@ -5266,11 +5301,24 @@ details.collapse summary::-webkit-details-marker {
   display: none;
 }
 
-@media not all and (min-width: 1024px) {
+.peer:checked ~ .peer-checked\:grid-rows-\[1fr\] {
+  grid-template-rows: 1fr;
+}
 
-  .max-lg\:absolute {
-    position: absolute;
+.peer:checked ~ .group .peer-checked\:group-\[\]\:-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media not all and (min-width: 1280px) {
+
+  .max-xl\:\!px-4 {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
   }
+}
+
+@media not all and (min-width: 1024px) {
 
   .max-lg\:py-6 {
     padding-top: 1.5rem;
@@ -5422,20 +5470,8 @@ details.collapse summary::-webkit-details-marker {
     align-items: flex-start;
   }
 
-  .sm\:items-center {
-    align-items: center;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
   .sm\:gap-10 {
     gap: 2.5rem;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
   }
 
   .sm\:gap-5 {
@@ -5577,6 +5613,13 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 
+@media (min-width: 1280px) {
+
+  .xl\:right-0 {
+    right: 0px;
+  }
+}
+
 .\[\&_a\:hover\]\:underline a:hover {
   text-decoration-line: underline;
 }
@@ -5597,6 +5640,10 @@ details.collapse summary::-webkit-details-marker {
 .\[\&_strong\]\:text-xl strong {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.\[\&_strong\]\:font-bold strong {
+  font-weight: 700;
 }
 
 .htmx-request .\[\.htmx-request_\&\]\:pointer-events-none {
