feat: Partial PDP

--- a/tailwind.css
+++ b/tailwind.css
@@ -56,9 +56,9 @@
 .triangle {
   width: 0;
   height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 15px solid #333;
+  border-left: var(--triangle-size) solid transparent;
+  border-right: var(--triangle-size) solid transparent;
+  border-bottom: var(--triangle-size) solid var(--triangle-color);
 }
 
 .break-line:not(:has(*)) {
