--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -5848,6 +5848,10 @@ details.collapse summary::-webkit-details-marker {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .max-lg\:font-bold {
+    font-weight: 700;
+  }
 }
 
 @media (max-width: 500px) {
@@ -6066,6 +6070,10 @@ details.collapse summary::-webkit-details-marker {
     width: 50%;
   }
 
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
   .lg\:w-\[12\.5\%\] {
     width: 12.5%;
   }
@@ -6084,6 +6092,10 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:max-w-\[600px\] {
     max-width: 600px;
+  }
+
+  .lg\:flex-1 {
+    flex: 1 1 0%;
   }
 
   .lg\:flex-\[100px\] {
